--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@ envlist = py27, py33, py34, py36, pypy
 [testenv]
 commands =
     pep8 cloudipsp
-    nosetests --include=cloudipsp/* --exclude=functional*
+    nosetests --include=cloudipsp/*
 deps =
     unittest2
     requests>=0.8.8
