--- a/tox.ini
+++ b/tox.ini
@@ -1,13 +1,14 @@
 [tox]
-envlist = py27, py33, py34, py36, pypy
+envlist = py27, py33, py35, py36
 
 [testenv]
 commands =
-    pep8 cloudipsp
-    nosetests --include=cloudipsp/*
+    nosetests --with-coverage --cover-package=cloudipsp
 deps =
+    nose
+    coverage
     unittest2
     requests>=0.8.8
-    pep8>=1.4.6
+    pycodestyle>=1.4.6
 skip_missing_interpreters =
     true
