--- a/tox.ini
+++ b/tox.ini
@@ -1,14 +1,15 @@
 [tox]
-envlist = py27, py33, py35, py36
+envlist = py27, py33, py34, py35, py36
 
 [testenv]
 commands =
+    pycodestyle cloudipsp
     nosetests --with-coverage --cover-package=cloudipsp
 deps =
     nose
     coverage
     unittest2
     requests>=0.8.8
-    pycodestyle>=1.4.6
+    pycodestyle
 skip_missing_interpreters =
     true
