--- a/tox.ini
+++ b/tox.ini
@@ -9,7 +9,7 @@ deps =
     nose
     coverage
     unittest2
-    requests>=0.8.8
+    requests
     pycodestyle
 skip_missing_interpreters =
     true
