--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,21 @@ env:
   - TOXENV=py35
   - TOXENV=py36
 
+matrix:
+  include:
+    - python: 3.3
+      env:
+      - TOXENV=py33
+    - python: 3.4
+      env:
+      - TOXENV=py33
+    - python: 3.5
+      env:
+      - TOXENV=py35
+    - python: 3.6
+      env:
+      - TOXENV=py36
+
 install:
   - pip install tox pycodestyle nose coverage unittest2 requests
 
