--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ matrix:
     - python: 3.6
       env:
       - TOXENV=py36
-    - python: 3.7
+    - python: "3.7-dev"
       env:
       - TOXENV=py37
 install:
