--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,9 @@ matrix:
     - python: 3.6
       env:
       - TOXENV=py36
+    - python: '3.7-dev'
+      env:
+      - TOXENV=py36
 install:
   - pip install tox pycodestyle nose coverage unittest2 requests
 
